--- a/Pletko/Views/User/Pretraga.cshtml
+++ b/Pletko/Views/User/Pretraga.cshtml
@@ -227,7 +227,7 @@
 
 <footer class="d-flex flex-wrap justify-content-between align-items-center px-5  border-top">
     <div class="col-md-4 d-flex align-items-center">
-        <span class="mb-3 mb-md-0">© 2025 Miloš Savić | milossavic199@gmial.com</span>
+        <span class="mb-3 mb-md-0">© 2025 Miloš Savić | milossavic199@gmail.com</span>
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
